@@ -455,13 +455,11 @@ xmlDtdPtr dtd = xmlParseDTD(NULL, filename_of_dtd); /* parse the DTD */
 
 <p>There are several on-line resources related to using libxml:</p>
 <ol>
-  <li>Use the <a href="search.php">search engine</a> to lookup
-  informations.</li>
+  <li>Use the <a href="search.php">search engine</a> to look up
+  information.</li>
   <li>Check the <a href="FAQ.html">FAQ.</a></li>
   <li>Check the <a href="http://xmlsoft.org/html/libxml-lib.html">extensive
-    documentation</a> automatically extracted from code comments (using <a
-    href="http://cvs.gnome.org/bonsai/rview.cgi?cvsroot=/cvs/gnome&amp;dir=gtk-doc">gtk
-    doc</a>).</li>
+    documentation</a> automatically extracted from code comments.</li>
   <li>Look at the documentation about <a href="encoding.html">libxml
     internationalization support</a>.</li>
   <li>This page provides a global overview and <a href="example.html">some
@@ -473,8 +471,8 @@ xmlDtdPtr dtd = xmlParseDTD(NULL, filename_of_dtd); /* parse the DTD */
   <li><a href="mailto:james@daa.com.au">James Henstridge</a> wrote <a
     href="http://www.daa.com.au/~james/gnome/xml-sax/xml-sax.html">some nice
     documentation</a> explaining how to use the libxml SAX interface.</li>
-  <li>George Lebl wrote <a
-    href="http://www-4.ibm.com/software/developer/library/gnome3/">an article
+<li>George Lebl wrote <a
+    href="http://www-106.ibm.com/developerworks/library/l-gnome3/">an article
     for IBM developerWorks</a> about using libxml.</li>
   <li>Check <a href="http://cvs.gnome.org/lxr/source/gnome-xml/TODO">the TODO
     file</a>.</li>
